z-index for top-bar fixes overlap with about-img

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     padding: 10px 0px;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
+    z-index: 1;
 }
 
 .top-bar-button {
